objects/INFRA_JDA_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>General settings for INFRA JDA batch classes</description>
    <fields>
        <fullName>CountingBack__c</fullName>
        <label>CountingBack</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountingForward__c</fullName>
        <label>CountingForward</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engineering_Opportunity_Record_Types__c</fullName>
        <inlineHelpText>Please enter comma separated values.</inlineHelpText>
        <label>Engineering Opportunity Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_th_Day_of_Fiscal_Month__c</fullName>
        <inlineHelpText>Give the exact (N)th day on which the batch class should run.</inlineHelpText>
        <label>(N)th Day of Fiscal Month</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Opportunity_Record_Types__c</fullName>
        <inlineHelpText>Please enter comma separated values</inlineHelpText>
        <label>Sales Opportunity Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>INFRA JDA Settings</label>
</CustomObject>